tests/typechecking/valid/simple_if_LE_int.ml
let x=5 in if x<=5 then 1 else 0