tests/typechecking/invalid/if_LE_bool_int.ml
let x= true in if x<=4 then 0 else 1